package ar.edu.unlp.info.oo2.Ejercicio2_PiedraPapelTijera;

public class Game {
	
	public String play(Jugada jugada1,Jugada jugada2) {
		return jugada1.play(jugada2); 
		
	}
	
	
	
}

